<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_StrategySetParameters" Id="{bf7c7f5f-b067-4346-9be2-2c3102008760}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_StrategySetParameters :
STRUCT
	bProductionModeActivated : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>