<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_StrategyState" Id="{e776d867-6fdf-4ce5-a8bf-49615d41c82d}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_StrategyState :
STRUCT
	fTargetTemperature_HNHT_Heating : REAL;
	fTargetTemperature_HNHT_Cooling : REAL;
	fTargetTemperature_HNLT_Cooling : REAL;
	fTargetTemperature_HNLT_Heating : REAL;
	fTargetTemperature_CN : REAL;
	fTargetTemperature_ProductionHall : REAL;
	
	aTemperatureLimits_HNHT : ARRAY[1..2] OF REAL;
	aTemperatureLimits_HNLT : ARRAY[1..2] OF REAL;
	aTemperatureLimits_CN : ARRAY[1..2] OF REAL;	
	
	fFeedTemperature_HNHT : REAL;
	fFeedTemperature_HNLT_Heating : REAL;
	fFeedTemperature_HNLT_Cooling : REAL;
	fFeedTemperature_CN : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>